--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
   },
-  "description": ""
+  "description": "For Node.js and API practice",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/farhanfahmid/newsletter-signup-page-with-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/farhanfahmid/newsletter-signup-page-with-backend/issues"
+  },
+  "homepage": "https://github.com/farhanfahmid/newsletter-signup-page-with-backend#readme"
 }
